[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lilac"
version = "0.0.1"
description = "LILAC: Online Language Corrections for Robotic Manipulation via Shared Autonomy"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Siddharth Karamcheti", email="skaramcheti@cs.stanford.edu"},
    {name = "Yuchen Cui", email="yuchenc@stanford.edu"}
]
keywords = ["human-robot interaction", "robotics", "natural language processing", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "annoy",
    "einops",
    "gym",
    "ipython",
    "matplotlib",
    "openai",
    "pygame",
    "pytorch-lightning==1.6.4",
    "scipy",
    "transformers",
    "typed-argument-parser",
]

[project.optional-dependencies]
dev = [
    # https://github.com/psf/black/issues/2964
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "pre-commit"
]

[project.urls]
homepage = "https://github.com/Stanford-ILIAD/lilac"
repository = "https://github.com/Stanford-ILIAD/lilac"
documentation = "https://github.com/Stanford-ILIAD/lilac"

[tool.setuptools]
packages=["lilac"]

[tool.black]
line-length = 121
preview = true
target-version = ["py38"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
line_length = 121
multi_line_output = 3
profile = "black"
use_parentheses = true
